Login Page created

--- a/www/views/menu.html
+++ b/www/views/menu.html
@@ -18,11 +18,17 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
-        </ion-item>
         <ion-item menu-close href="#/app/main">
-          Main
+          Neue Zeiterfassung
+        </ion-item>
+        <ion-item menu-close href="#/app/personal">
+          Personaleinstellungen
+        </ion-item>
+        <ion-item menu-close href="#/app/report">
+          Report
+        </ion-item>
+        <ion-item menu-close href="#/app/holidays">
+          Ferieneinstellungen
         </ion-item>
       </ion-list>
     </ion-content>
