--- a/www/views/login.html
+++ b/www/views/login.html
@@ -1,25 +1,20 @@
-<ion-modal-view>
-  <ion-header-bar>
-    <h1 class="title">Login</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
-    </div>
-  </ion-header-bar>
+<ion-view view-title="Tempura">
   <ion-content>
-    <form ng-submit="doLogin()">
+    <h1>Login</h1>
+    <form ng-submit="doLogin(loginData)">
       <div class="list">
         <label class="item item-input">
-          <span class="input-label">Username</span>
+          <span class="input-label">Benutzername</span>
           <input type="text" ng-model="loginData.username">
         </label>
         <label class="item item-input">
-          <span class="input-label">Password</span>
+          <span class="input-label">Passwort</span>
           <input type="password" ng-model="loginData.password">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
+          <button class="button button-block button-positive" type="submit">Anmelden</button>
         </label>
       </div>
     </form>
   </ion-content>
-</ion-modal-view>
+</ion-view>
