Die Loginseite hat nun ein eigenes JavaScript-File und das Menü wird nicht angezeigt, jedoch bei Main.html schon.

--- a/www/views/main.html
+++ b/www/views/main.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Zeiterfassung">
+<ion-view view-title="Zeiterfassung" hide-back-button="true">
   <ion-content>
     <h1>Zeiterfassung</h1>
   </ion-content>
