--- a/www/views/login.html
+++ b/www/views/login.html
@@ -1,16 +1,17 @@
-<ion-view view-title="Tempura">
+<ion-view view-title="Tempura" hide-nav-bar="true">
   <ion-content>
     <h1>Login</h1>
     <form ng-submit="doLogin(loginData)">
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Benutzername</span>
-          <input type="text" ng-model="loginData.username">
+          <select id="user_list" ng-model="loginData.username" ng-init="listAllUsers()"><option value=""></option></select>
         </label>
         <label class="item item-input">
           <span class="input-label">Passwort</span>
           <input type="password" ng-model="loginData.password">
         </label>
+        <label class="item" id="login_failure_alert"style="color: red"></label>
         <label class="item">
           <button class="button button-block button-positive" type="submit">Anmelden</button>
         </label>
