PHP-Worktime und JS-Worktime erstellt

--- a/www/views/main.html
+++ b/www/views/main.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Zeiterfassung" hide-back-button="true">
+<ion-view view-title="Zeiterfassung" hide-back-button="true" ng-init="getLast5Days()">
   <ion-content>
     <h1>Zeiterfassung</h1>
   </ion-content>
