--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,6 +32,12 @@ $colors: (
   change:     #FFA500
 );
 
+.col{
+//background: gray;
+border: 0.5px solid lightgrey;
+text-align: middle;
+}
+
 
 // App iOS Variables
 // --------------------------------------------------
